--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,9 @@ jobs:
           echo '=== Disk information ==='
           df -H
 
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
       - name: Allure - Setup Java
         if: always()
         uses: actions/setup-java@v3
@@ -79,7 +82,7 @@ jobs:
       - name: Build test report
         if: always()
         run: |
-          allure generate
+          npx allure generate
 
       - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3
