--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,9 +80,14 @@ jobs:
           path: gh-pages
 
       - name: Build test report
-        run: |
-          npm ci
-          npx allure generate
+        uses: simple-elf/allure-report-action@v1.9
+        if: always()
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: ./allure-results
+          allure_report: allure-report
+          keep_reports: 20
 
       - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3
