--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,8 @@ jobs:
         uses: cypress-io/github-action@v6.6.1
         with:
           browser: chrome
+          env: allure=true
         env:
-          # Get the short ref name of the branch that triggered the workflow run
-          COMMIT_INFO_BRANCH: ${{ github.ref_name }}
-          allure: true
           SPLIT: ${{ strategy.job-total }}
           SPLIT_INDEX: ${{ strategy.job-index }}
 
@@ -56,23 +54,15 @@ jobs:
     if: ${{ always() }}
     needs: [cypress-run]
     steps:
-      - name: Log runner details
-        run: |
-          echo '=== Disk information ==='
-          df -H
-
-      - name: Checkout
-        uses: actions/checkout@v4.1.1
-
       - name: Allure - Setup Java
         if: always()
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4.2.1
         with:
           distribution: temurin
           java-version: 21
 
       - name: Load test report history
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.1
         if: always()
         continue-on-error: true
         with:
@@ -85,12 +75,12 @@ jobs:
         with:
           gh_pages: gh-pages
           allure_history: allure-history
-          allure_results: ./allure-results
+          allure_results: allure-results
           allure_report: allure-report
           keep_reports: 20
 
       - name: Publish test report
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3.9.3
         if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
