--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       # leaving Cypress Cloud hanging ...
       # https://github.com/cypress-io/github-action/issues/48
       fail-fast: false
+      matrix:
+        containers: [1, 2]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
@@ -52,6 +55,15 @@ jobs:
     if: ${{ always() }}
     needs: [cypress-run]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
+      - name: Log runner details
+        run: |
+          echo '=== Disk information ==='
+          df -H
+          tree -d
+
       - name: Allure - Setup Java
         if: always()
         uses: actions/setup-java@v4.2.1
