--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-        # Install NPM dependencies, cache them correctly
+      - name: Sleep for 40 seconds for first job
+        if: ${{ strategy.job-index}} == 1
+        run: sleep 40s
+        shell: bash
+
+      # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
         run: |
@@ -45,28 +50,8 @@ jobs:
           SPLIT: ${{ strategy.job-total }}
           SPLIT_INDEX: ${{ strategy.job-index }}
 
-      - name: Free disk space - After report generation
-        if: always()
-        run: |
-          df -H
-          tree -d
-
-  gererate_report:
-    runs-on: ubuntu-latest
-    if: ${{ always() }}
-    needs: [cypress-run]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.1
-
-      - name: Log runner details
-        run: |
-          echo '=== Disk information ==='
-          df -H
-          tree -d
-
       - name: Allure - Setup Java
-        if: always()
+        if: ${{ strategy.job-index }} == 1
         uses: actions/setup-java@v4.2.1
         with:
           distribution: temurin
@@ -74,7 +59,7 @@ jobs:
 
       - name: Load test report history
         uses: actions/checkout@v4.1.1
-        if: always()
+        if: ${{ strategy.job-index }} == 1
         continue-on-error: true
         with:
           ref: gh-pages
@@ -82,7 +67,7 @@ jobs:
 
       - name: Build test report
         uses: simple-elf/allure-report-action@v1.9
-        if: always()
+        if: ${{ strategy.job-index }} == 1
         with:
           gh_pages: gh-pages
           allure_history: allure-history
@@ -92,14 +77,14 @@ jobs:
 
       - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3.9.3
-        if: always()
+        if: ${{ strategy.job-index }} == 1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
 
       - name: Post the link to the report
-        if: always()
+        if: ${{ strategy.job-index }} == 1
         uses: Sibz/github-status-action@v1.1.6
         with:
           authToken: ${{secrets.GITHUB_TOKEN}}
@@ -107,3 +92,9 @@ jobs:
           state: "success"
           sha: ${{ github.sha }}
           target_url: https://karinaav.github.io/cypress_learn_project/${{ github.run_number }}
+
+      - name: Free disk space - After report generation
+        if: always()
+        run: |
+          df -H
+          tree -d
