--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Sleep for 40 seconds for first job
-        if: ${{ strategy.job-index}} == 1
+        if: ${{ strategy.job-index == 1}}
         run: sleep 40s
         shell: bash
 
@@ -51,7 +51,7 @@ jobs:
           SPLIT_INDEX: ${{ strategy.job-index }}
 
       - name: Allure - Setup Java
-        if: ${{ strategy.job-index }} == 1
+        if: ${{ strategy.job-index == 1}}
         uses: actions/setup-java@v4.2.1
         with:
           distribution: temurin
@@ -59,7 +59,7 @@ jobs:
 
       - name: Load test report history
         uses: actions/checkout@v4.1.1
-        if: ${{ strategy.job-index }} == 1
+        if: ${{ strategy.job-index == 1}}
         continue-on-error: true
         with:
           ref: gh-pages
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build test report
         uses: simple-elf/allure-report-action@v1.9
-        if: ${{ strategy.job-index }} == 1
+        if: ${{ strategy.job-index == 1}}
         with:
           gh_pages: gh-pages
           allure_history: allure-history
@@ -77,14 +77,14 @@ jobs:
 
       - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3.9.3
-        if: ${{ strategy.job-index }} == 1
+        if: ${{ strategy.job-index == 1}}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
 
       - name: Post the link to the report
-        if: ${{ strategy.job-index }} == 1
+        if: ${{ strategy.job-index == 1}}
         uses: Sibz/github-status-action@v1.1.6
         with:
           authToken: ${{secrets.GITHUB_TOKEN}}
