--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-      - name: Sleep for 40 seconds for first job
-        if: ${{ strategy.job-index == 1}}
-        run: sleep 60s
-        shell: bash
-
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
@@ -51,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: merged-reports-as-blob # name of the file you want to have once its uploaded
-          path: blob-report # path where the reports are, from where to take the files.
+          path: allure-results # path where the reports are, from where to take the files.
           retention-days: 14
 
   merge-reports-and-upload:
