--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: cypress-report-${{ steps.timestampid.outputs.timestamp }} # name of the file you want to have once its uploaded
-          path: cypress-report # path where the reports are, from where to take the files
+          path: downloaded-merged-reports-as-blob # path where the reports are, from where to take the files
           retention-days: 14
 
       - name: Build test report
@@ -102,15 +102,6 @@ jobs:
           allure_results: downloaded-merged-reports-as-blob
           allure_report: allure-report
           keep_reports: 10
-      - name: Push the new files to github pages
-        # This will create a separate branch called gh-pages where it will store only reports. And from where it will push all future changes
-        # to github pages. Having a separate branch will keep the reports and changes commits separate to your main/master
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
-          destination_dir: ${{ steps.timestampid.outputs.timestamp }} # a sub-directory where to publish to avoid overwriting other reports
 
       - name: Write URL in summary
-        run: echo "### Test results (link available after 20 secs) - https://${{ github.repository_owner }}.github.io/cypress_learn_project/${{ steps.timestampid.outputs.timestamp }}/" >> $GITHUB_STEP_SUMMARY
+        run: echo "### Test results (link available after 20 secs) - https://${{ github.repository_owner }}.github.io/cypress_learn_project/${{ github.run_number }}/" >> $GITHUB_STEP_SUMMARY
