--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,4 +96,4 @@ jobs:
       - uses: geekyeggo/delete-artifact@v4
         with:
           name: |
-            amerged-reports-as-blob*
+            merged-reports-as-blob*
