--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,3 +97,29 @@ jobs:
         with:
           name: |
             merged-reports-as-blob*
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.9
+        if: ${{ always() }}
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: downloaded-merged-reports
+          allure_report: allure-report
+          keep_reports: 10
+
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v3.9.3
+        if: ${{ always() }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
+
+      - name: Write URL in summary
+        run: echo "### Test results (link available after 20 secs) - https://${{ github.repository_owner }}.github.io/cypress_learn_project/${{ github.run_number }}/" >> $GITHUB_STEP_SUMMARY
+
+      - name: Free disk space - After report generation
+        if: always()
+        run: |
+          df -H
