--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: cypress_learn_project
 
-on: workflow_dispatch
+on: push
 
 env:
   # Set up the Cypress Cloud project ID and record key as environment variables
@@ -93,18 +93,13 @@ jobs:
           path: downloaded-merged-reports-as-blob # path where the reports are, from where to take the files
           retention-days: 14
 
-      - uses: geekyeggo/delete-artifact@v4
-        with:
-          name: |
-            merged-reports-as-blob*
-
       - name: Build test report
         uses: simple-elf/allure-report-action@v1.9
         if: ${{ always() }}
         with:
           gh_pages: gh-pages
           allure_history: allure-history
-          allure_results: downloaded-merged-reports
+          allure_results: downloaded-merged-reports-as-blob
           allure_report: allure-report
           keep_reports: 10
 
