--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,22 +65,11 @@ jobs:
         # this will store current time with UTC in outputs.timestamp (eg of value: 20231028_233147Z)
         run: echo "timestamp=$(date --utc +%Y%m%d_%H%M%SZ)" >> "$GITHUB_OUTPUT"
 
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
         # we now download the reports uploaded previously to merge them and create one single html report
       - name: Download blob reports from GitHub Actions Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: merged-reports-as-blob-0 # name of the file stored as artifact (as uploaded at the previous job)
-          path: downloaded-merged-reports-as-blob # name of the folder where the download will be saved
-
-      - name: Download blob reports from GitHub Actions Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: merged-reports-as-blob-1 # name of the file stored as artifact (as uploaded at the previous job)
+          merge-multiple: true
           path: downloaded-merged-reports-as-blob # name of the folder where the download will be saved
 
       - name: /[OPTIONAL] Upload full html report to artifacts for history
@@ -90,6 +79,7 @@ jobs:
           name: cypress-report-${{ steps.timestampid.outputs.timestamp }} # name of the file you want to have once its uploaded
           path: downloaded-merged-reports-as-blob # path where the reports are, from where to take the files
           retention-days: 14
+
       - name: Get Allure history
         uses: actions/checkout@v4
         if: always()
