--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,19 +65,25 @@ jobs:
         # this will store current time with UTC in outputs.timestamp (eg of value: 20231028_233147Z)
         run: echo "timestamp=$(date --utc +%Y%m%d_%H%M%SZ)" >> "$GITHUB_OUTPUT"
 
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
         # we now download the reports uploaded previously to merge them and create one single html report
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
         with:
           merge-multiple: true
-          path: downloaded-merged-reports-as-blob # name of the folder where the download will be saved
+          path: downloaded-merged-reports # name of the folder where the download will be saved
 
       - name: /[OPTIONAL] Upload full html report to artifacts for history
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: cypress-report-${{ steps.timestampid.outputs.timestamp }} # name of the file you want to have once its uploaded
-          path: downloaded-merged-reports-as-blob # path where the reports are, from where to take the files
+          path: downloaded-merged-reports # path where the reports are, from where to take the files
           retention-days: 14
 
       - name: Get Allure history
@@ -94,7 +100,7 @@ jobs:
         with:
           gh_pages: gh-pages
           allure_history: allure-history
-          allure_results: downloaded-merged-reports-as-blob
+          allure_results: downloaded-merged-reports
           allure_report: allure-report
           keep_reports: 10
 
