--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,49 @@ jobs:
 
       - name: Upload blob report to GitHub Actions Artifacts
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: merged-reports-as-blob-${{ strategy.job-index }} # name of the file you want to have once its uploaded
+          path: allure-results # path where the reports are, from where to take the files.
+          retention-days: 14
+
+  cypress-run-1:
+    runs-on: ubuntu-latest
+    strategy:
+      # when one test fails, DO NOT cancel the other
+      # containers, because this will kill Cypress processes
+      # leaving Cypress Cloud hanging ...
+      # https://github.com/cypress-io/github-action/issues/48
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
+
+    steps:
+      - name: Checkout
+        uses:
+          actions/checkout@v4.1.1
+
+          # Install NPM dependencies, cache them correctly
+          # and run all Cypress tests
+      - name: Cypress run
+        run: |
+          npm ci
+          npx cypress install
+
+      - name: Cypress tests run with actions
+        uses: cypress-io/github-action@v6.6.1
+        with:
+          browser: firefox
+          env: allure=true
+        env:
+          SPLIT: ${{ strategy.job-total }}
+          SPLIT_INDEX: ${{ strategy.job-index }}
+
+      - name: Upload blob report to GitHub Actions Artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: merged-reports-as-blob-1-${{ strategy.job-index }} # name of the file you want to have once its uploaded
           path: allure-results # path where the reports are, from where to take the files.
           retention-days: 14
 
@@ -68,7 +108,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
       - name: Install dependencies
         run: npm ci
         # we now download the reports uploaded previously to merge them and create one single html report
@@ -80,7 +120,7 @@ jobs:
 
       - name: /[OPTIONAL] Upload full html report to artifacts for history
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: cypress-report-${{ steps.timestampid.outputs.timestamp }} # name of the file you want to have once its uploaded
           path: downloaded-merged-reports # path where the reports are, from where to take the files
