--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@mmisty/cypress-allure-adapter": "^0.16.2",
     "@shelex/cypress-allure-plugin": "^2.40.1",
-    "allure-commandline": "^2.27.0",
-    "allure-cypress": "^2.14.1",
     "cypress": "^13.6.3",
-    "cypress-split": "^1.19.0",
-    "mocha-allure-reporter": "^1.4.0"
+    "cypress-split": "^1.19.0"
   }
 }
